--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Update these (from Curator Guide) -->
-  <meta name="description" content="Junior Fall Portfolio for YOUR NAME" />
+  <meta name="description" content="Junior Fall Portfolio for Mirian Menchu" />
   <meta name="keywords" content="portfolio, junior, projects, programming, web development" />
-  <meta name="author" content="YOUR NAME" />
+  <meta name="author" content="Mirian Menchu" />
 
   <title>YOUR NAME | Junior Fall Portfolio</title>
 
@@ -55,8 +55,8 @@
         </div>
 
         <div class="bio-text">
-          <h1>YOUR NAME</h1>
-          <h4>Student at YOUR SCHOOL</h4>
+          <h1>Mirian Menchu</h1>
+          <h4>Student at Thomas A. Edison</h4>
           <p>
             Paste your portfolio purpose statement from your Curator Guide here.
           </p>
