--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </a>
 
         <!-- Email -->
-        <a href="mailto:YOUR_EMAIL" target="_blank" rel="noopener">
+        <a href="mailto:mirianm13@nycstudents.net" target="_blank" rel="noopener">
           <div class="picture">
             <img class="link-pic" src="email_icon.png" alt="Email" />
           </div>
@@ -98,13 +98,14 @@
     <!-- PROJECTS SECTION (repeatable blocks) -->
     <section class="resource-card">
       <h2>Featured Projects</h2>
-      <p>Each project includes an embed and a reflection from your Curator Guide.</p>
+      <h3>Functions arcade</h3>
+      <p>If you are bored and want to play a few games like Guessing game, coin flip, and Math quiz then this is the code for you! We have an interactive game where we let the user choose the game of choice and run through our code until they win the game!</p>
     </section>
 
     <!-- PROJECT 1 -->
     <section class="resource-card">
       <div class="project">
-        <iframe src="PASTE-PROJECT-LINK-1" title="Project 1"></iframe>
+        <iframe src="https://py3.codeskulptor.org/#user310_sMqQMVeVTEuhrfW.py" title="Functions Arcade"></iframe>
 
         <div class="reflection">
           <h3>Project Title 1</h3>
