--- a/index.html
+++ b/index.html
@@ -105,14 +105,14 @@
     <!-- PROJECT 1 -->
     <section class="resource-card">
       <div class="project">
-        <iframe src="https://py3.codeskulptor.org/#user310_sMqQMVeVTEuhrfW.py" title="Functions Arcade"></iframe>
+        <iframe src="https://py3.codeskulptor.org/#user310_sMqQMVeVTEuhrfW.py" title= "Functions Arcade"></iframe>
 
         <div class="reflection">
-          <h3>Project Title 1</h3>
+          <h3>Functions Arcade</h3>
           <p>
             Paste your curated reflection for Project 1 here (3–5 sentences).
           </p>
-          <p><strong>Skills:</strong> HTML, CSS, Flexbox (edit based on your guide)</p>
+          <p><strong>Skills:</strong>Python skills:Def, For loops, if,else,elif,random.randint, While loops, frame, collaboration.</p>
         </div>
       </div>
     </section>
