--- a/index.html
+++ b/index.html
@@ -58,9 +58,7 @@
           <h1>Mirian Menchu</h1>
           <h4>Student at Thomas A. Edison</h4>
           <p>
-            Hello! The purpose of my portfolio is to share the accomplishments that I as a web developer am very proud of. I want this as a way
-            to show people what my skills are and how I can develop them to be better. I hope that it reaches people who can give me advice and chance
-            to improve what I already know. 
+            Hello! The purpose of my portfolio is to show skills that 
           </p>
         </div>
       </div>
