--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="portfolio, junior, projects, programming, web development" />
   <meta name="author" content="Mirian Menchu" />
 
-  <title>YOUR NAME | Junior Fall Portfolio</title>
+  <title>Mirian Menchu | Junior Fall Portfolio</title>
 
   <!-- Main stylesheet -->
   <link rel="stylesheet" href="style.css" />
@@ -58,7 +58,10 @@
           <h1>Mirian Menchu</h1>
           <h4>Student at Thomas A. Edison</h4>
           <p>
-            Hello! The purpose of my portfolio is to show skills that 
+            Hello! The purpose of my portfolio is to show skills that I have gained as a web developer. I have provided projects I have done throughout 
+            this school year that I feel very proud of because it shows the skills I have learned and new skills that I can gain from them. Not only that but 
+            I have also done many collaberations with my peers which helped projects be more fun and unique. I hope this reaches people that can give me advice on 
+            how to improve my skills and give me opportunites where I can keep learning and polish the skills I already have. 
           </p>
         </div>
       </div>
