--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
         </a>
 
         <!-- Email -->
-        <a href="mailto:mirianm13@nycstudents.net" target="_blank" rel="noopener">
+        <a href="mailto: mirianm13@nycstudents.net" target="_blank" rel="noopener">
           <div class="picture">
-            <img class="link-pic" src="email_icon.png" alt="Email" />
+            <img class="link-pic" src="google.webp" alt="Email" />
           </div>
         </a>
 
@@ -100,7 +100,7 @@
     <section class="resource-card">
       <h2>Featured Projects</h2>
       <h3>Functions arcade</h3>
-      <p>If you are bored and want to play a few games like Guessing game, coin flip, and Math quiz then this is the code for you! We have an interactive game where we let the user choose the game of choice and run through our code until they win the game!</p>
+      <p>This is the project i am most prouf of because it incoorperates most of the skills I learned throughout the school year + collaberation/Communication with my peers as well. </p>
     </section>
 
     <!-- PROJECT 1 -->
@@ -111,7 +111,7 @@
         <div class="reflection">
           <h3>Functions Arcade</h3>
           <p>
-            Paste your curated reflection for Project 1 here (3–5 sentences).
+            if you are bored and want to play a few games like Guessing game, coin flip, and Math quiz then this is the code for you! We have an interactive game where we let the user choose the game of choice and run through our code until they win the game!
           </p>
           <p><strong>Skills:</strong> Python skills: Def, For loops, if,else,elif,random.randint, While loops, frame, collaboration.</p>
         </div>
