--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
         </a>
 
         <!-- LinkedIn (or other) -->
-        <a href="PASTE-LINKEDIN-OR-OTHER" target="_blank" rel="noopener">
+        <a href="https://www.linkedin.com/feed/" target="_blank" rel="noopener">
           <div class="picture">
-            <img class="link-pic" src="linkedin_icon.png" alt="LinkedIn" />
+            <img class="link-pic" src="linkedin2.png" alt="LinkedIn" />
           </div>
         </a>
       </div>
