added links and images

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
 
       <div class="skill-images">
         <!-- Old portfolio -->
-        <a href="PASTE-OLD-PORTFOLIO-LINK" target="_blank" rel="noopener">
+        <a href="https://mirianmenchu.github.io/Sophomore_portfolio/" target="_blank" rel="noopener">
           <div class="picture">
-            <img class="link-pic" src="old_portfolio_icon.png" alt="Old Portfolio" />
+            <img class="link-pic" src="portfolio2.jpg" alt="Old Portfolio" />
           </div>
         </a>
 
