--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div class="reflection">
           <h3>Functions Arcade</h3>
           <p>
-            if you are bored and want to play a few games like Guessing game, coin flip, and Math quiz then this is the code for you! We have an interactive game where we let the user choose the game of choice and run through our code until they win the game!
+            If you are bored and want to play a few games like Guessing game, coin flip, and Math quiz then this is the code for you! We have an interactive game where we let the user choose the game of choice and run through our code until they win the game!
           </p>
           <p><strong>Skills:</strong> Python skills: Def, For loops, if,else,elif,random.randint, While loops, frame, collaboration.</p>
         </div>
@@ -121,10 +121,10 @@
     <!-- PROJECT 2 -->
     <section class="resource-card">
       <div class="project">
-        <iframe src="PASTE-PROJECT-LINK-2" title="Project 2"></iframe>
+        <iframe src="https://py3.codeskulptor.org/#user310_oFztCTrgSl21uQC.py" title="Holidays drawing project"></iframe>
 
         <div class="reflection">
-          <h3>Project Title 2</h3>
+          <h3>Holidays drawing project</h3>
           <p>
             Paste your curated reflection for Project 2 here (3–5 sentences).
           </p>
