--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
   <!-- FOOTER -->
   <footer class="resource-card">
-    <p>© <span id="year"></span> YOUR NAME | Junior Fall Portfolio</p>
+    <p>© <span id="year"></span> Mirian Menchu | Junior Fall Portfolio</p>
   </footer>
 
   <script>
