--- a/projects.html
+++ b/projects.html
@@ -46,10 +46,10 @@
       <!-- PROJECT 2 -->
     <section class="resource-card">
       <div class="project">
-        <iframe src="https://py3.codeskulptor.org/#user310_oFztCTrgSl21uQC.py" title="Holidays drawing project"></iframe>
+        <iframe src="https://py3.codeskulptor.org/#user310_SNpuatVLb0_1.py" title="CFU#2"></iframe>
 
         <div class="reflection">
-          <h3>Holidays drawing project</h3>
+          <h3>CFU#2</h3>
           <p>
             Paste your curated reflection for Project 2 here (3–5 sentences).
           </p>
