--- a/projects.html
+++ b/projects.html
@@ -58,6 +58,20 @@
       </div>
     </section>
 
+        <section class="resource-card">
+      <div class="project">
+        <iframe src="https://py3.codeskulptor.org/#user310_sMqQMVeVTEuhrfW.py" title="Functions Arcade"></iframe>
+
+        <div class="reflection">
+          <h3>Functions Arcade </h3>
+          <p>
+            Paste your curated reflection for Project 2 here (3–5 sentences).
+          </p>
+          <p><strong>Skills:</strong> (list skills here)</p>
+        </div>
+      </div>
+    </section>
+
     <!-- Add more projects by copying PROJECT blocks -->
 
   </main>
