--- a/cfus.html
+++ b/cfus.html
@@ -46,10 +46,10 @@
       <!-- PROJECT 2 -->
     <section class="resource-card">
       <div class="project">
-        <iframe src="https://py3.codeskulptor.org/#user310_oFztCTrgSl21uQC.py" title="Holidays drawing project"></iframe>
+        <iframe src="https://py3.codeskulptor.org/#user310_SNpuatVLb0_1.py" title="CFU#2"></iframe>
 
         <div class="reflection">
-          <h3>Holidays drawing project</h3>
+          <h3>CFU#2</h3>
           <p>
             Paste your curated reflection for Project 2 here (3–5 sentences).
           </p>
@@ -60,10 +60,10 @@
 
         <section class="resource-card">
       <div class="project">
-        <iframe src="https://py3.codeskulptor.org/#user310_sMqQMVeVTEuhrfW.py" title="Functions Arcade"></iframe>
+        <iframe src="https://py3.codeskulptor.org/#user310_ub3ZK58e2K_2.py" title="CFU#5"></iframe>
 
         <div class="reflection">
-          <h3>Functions Arcade </h3>
+          <h3>CFU#5</h3>
           <p>
             Paste your curated reflection for Project 2 here (3–5 sentences).
           </p>
@@ -71,6 +71,66 @@
         </div>
       </div>
     </section>
+
+        <section class="resource-card">
+      <div class="project">
+        <iframe src="https://py3.codeskulptor.org/#user310_b6b59TfPXaPwpxg.py" title="CFU#7"></iframe>
+
+        <div class="reflection">
+          <h3>CFU#7</h3>
+          <p>
+            Paste your curated reflection for Project 2 here (3–5 sentences).
+          </p>
+          <p><strong>Skills:</strong> (list skills here)</p>
+        </div>
+      </div>
+    </section>
+
+        <section class="resource-card">
+      <div class="project">
+        <iframe src="https://py3.codeskulptor.org/#user310_xBSRmQqHTZzHjiP.py" title="CFU#10"></iframe>
+
+        <div class="reflection">
+          <h3>CFU#10</h3>
+          <p>
+            Paste your curated reflection for Project 2 here (3–5 sentences).
+          </p>
+          <p><strong>Skills:</strong> (list skills here)</p>
+        </div>
+      </div>
+    </section>
+
+        <section class="resource-card">
+      <div class="project">
+        <iframe src="https://py3.codeskulptor.org/#user310_j1j3fKA6LcyoPPy.py" title="CFU#13"></iframe>
+
+        <div class="reflection">
+          <h3>CFU#13</h3>
+          <p>
+            Paste your curated reflection for Project 2 here (3–5 sentences).
+          </p>
+          <p><strong>Skills:</strong> (list skills here)</p>
+        </div>
+      </div>
+    </section>
+
+        <section class="resource-card">
+      <div class="project">
+        <iframe src="https://py3.codeskulptor.org/#user310_6CGjw01RmktKoyc.py" title="CFU#14"></iframe>
+
+        <div class="reflection">
+          <h3>CFU#14</h3>
+          <p>
+            Paste your curated reflection for Project 2 here (3–5 sentences).
+          </p>
+          <p><strong>Skills:</strong> (list skills here)</p>
+        </div>
+      </div>
+    </section>
+
+
+
+
 
     <!-- Add more projects by copying PROJECT blocks -->
 
