added about me stuff

--- a/aboutme.html
+++ b/aboutme.html
@@ -43,36 +43,79 @@
     </nav>
   </header>
 
-      <!-- PROJECT 2 -->
-    <section class="resource-card">
-      <div class="project">
-        <iframe src="https://py3.codeskulptor.org/#user310_oFztCTrgSl21uQC.py" title="Holidays drawing project"></iframe>
+      <h1>ABOUT ME! :)</h1>
+    <h2>Introduction</h2>
+    <p>“Hello! My name is Mirian Menchu and I am 16 years old. I am currently attending Thomas A.Edison and I am in my Junior year of High School.
+      I attend Thomas A.Edison for their web development program which I am currently taking at the moment. I enjoy being creative and collaborative with
+      people because it is so much fun connecting with people and making even more connections through them! ”</p>
+  
+  <h2>Fun facts about me!</h2>
+    <img src="volleyball2.png" alt="volleyball team"> 
+    <p>Best Highlight about my life was getting into the volleyball team because I made so many new friends and through the team I made even more 
+      connections with people who also loved volleyball. Spending time with people doing something we loved really made this the highlight of my Junior Year. 
+    </p>
+    <p>About Volleyball:</p>
+    <ul>
+    <li>I was an Outside Hitter</li>
+    <li>I played some offical and unoffical games </li>
+    <li>Made new incredible friends that I now play with everyday after school</li>
+    <li>I am hoping to get right side hitter next year! </li>
+    </ul>
 
-        <div class="reflection">
-          <h3>Holidays drawing project</h3>
-          <p>
-            Paste your curated reflection for Project 2 here (3–5 sentences).
-          </p>
-          <p><strong>Skills:</strong> (list skills here)</p>
-        </div>
-      </div>
-    </section>
+    <h3>Sourdough Bread:</h3>
+     <img src=" download-2.jpg" alt="Sourdough Bread"> 
+    <p>A community favorite, boasting a crusty exterior and a soft, airy interior, embodying the classic sourdough charm</p>
+    <p>Ingredients:</p>
+    <ul>
+    <li>1 cup sourdough starter</li> 
+    <li>1 1/2 cups warm water</li>
+    <li>4 cups bread flour</li> 
+    <li>1 1/2 teaspoons salt</li>
+    </ul>
+    <p>Instructions:</p>
+    <ol>
+      <li>First, mix the starter, water, and 3 cups of flour in a large bowl.This should create a sticky dough.</li>
+      <li>Next, add salt, and remaining flour 1 tablespoon at a time until they are fully incorporated.</li>
+      <li>Then, knead the dough on a floured surface for about 15 minutes.</li> 
+      <li>Once the kneading is done, place the dough in a lightly greased bowl, cover it, and let it rise for about 5 hours.</li>
+        <li>Finally, shape the dough into a loaf, and let it rest for 30 minutes. When you are ready to bake, preheat your oven to 450°F and bake for about 30 minutes until it's golden brown.</li>
+    </ol>
+    <h3>Classic Carrot Cake:</h3>
+     <img src=" Carrot-Cake-Feature.jpg" alt="Carrot Cake"> 
+    <p>An homage to tradition and familial bonds, enriched with the natural sweetness of carrots and a crunch of walnuts, it holds a special place in his heart as it was his late grandfather's favorite. Every year on his grandfather's birthday, Denzel bakes this cake to honor his memory and the bond they shared over the love of baking.</p>
+    <p>Ingredients:</p>
+    <ul>
+      <li>2 cups all-purpose flour</li>
+      <li>2 cups granulated sugar</li>
+      <li>1 teaspoon baking soda</li>
+      <li>2 teaspoons cinnamon</li>
+      <li>1/2 teaspoon salt</li>
+      <li>1 cup vegetable oil</li> 
+      <li>4 large eggs</li>
+      <li>2 cups grated carrots</li>
+      <li>1 cup crushed pineapple</li>
+      <li>1/2 cup chopped walnuts</li>
+    </ul>
+    <p>Instructions:</p>
+    <ol>
+      <li>First, preheat the oven to 350°F</li>
+      <li>Next, mix together the flour, sugar, baking soda, cinnamon, and salt in a large bowl</li> <li>Then, stir in the oil and eggs until smooth</li>
+      <li>Fold in the carrots, pineapple, and walnuts and then pour the batter into a greased baking pan and bake for 30-35 minutes</li>
+      <li>Make sure you allow the cake to cool before frosting with cream cheese frosting</li>
+    </ol>
+    <h2>Baking tips</h2>
+    <p> importance of measuring ingredients accurately, allowing eggs and butter to reach room temperature before baking, and rotating the baking tray halfway through the baking time for an even bake.</p>
+    <h2>Quotes from happy customers</h2>
+    <p>Tina said, “Denzel’s sourdough is the best in town. It has the perfect crust and is always so fresh!” and Jordan raved, “The almond croissants are a little bite of heaven. I can’t get enough”</p>
+    <h2>Contact information</h2>
+    <ul>
+    <li>denzelstreats@gmail.com</li>
+      <li> linkedin.com/in/denzel-baker </li>
+      <li>instagram.com/denzelstreats</li>
+      <li>facebook.com/DenzelsBakery</li>
+      </ul>
 
-        <section class="resource-card">
-      <div class="project">
-        <iframe src="https://py3.codeskulptor.org/#user310_sMqQMVeVTEuhrfW.py" title="Functions Arcade"></iframe>
 
-        <div class="reflection">
-          <h3>Functions Arcade </h3>
-          <p>
-            Paste your curated reflection for Project 2 here (3–5 sentences).
-          </p>
-          <p><strong>Skills:</strong> (list skills here)</p>
-        </div>
-      </div>
-    </section>
-
-    <!-- Add more projects by copying PROJECT blocks -->
 
   </main>
 
