--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <nav class="navbar">
       <div class="navbar-left">
         <!-- Replace logo.png with your own image file -->
-        <img src="taehs.png" alt="Logo" />
+        <img src="cat.png" alt="Logo" />
       </div>
 
       <ul class="navbar-right">
