--- a/aboutme.html
+++ b/aboutme.html
@@ -29,8 +29,6 @@
   <header>
     <nav class="navbar">
       <div class="navbar-left">
-        <!-- Replace logo.png with your own image file -->
-        <img src="taehs.png" alt="Logo" />
       </div>
 
       <ul class="navbar-right">
@@ -43,17 +41,23 @@
     </nav>
   </header>
 
+      <section class="resource-card">
+
       <h1>ABOUT ME! :)</h1>
     <h2>Introduction</h2>
     <p>“Hello! My name is Mirian Menchu and I am 16 years old. I am currently attending Thomas A.Edison and I am in my Junior year of High School.
       I attend Thomas A.Edison for their web development program which I am currently taking at the moment. I enjoy being creative and collaborative with
       people because it is so much fun connecting with people and making even more connections through them! ”</p>
+
+      </section>
+
+      <section class="resource-card">
   
   <h2>Fun facts about me!</h2>
     <img src="volleyball2.png" alt="volleyball team"> 
-    <p>Best Highlight about my life was getting into the volleyball team because I made so many new friends and through the team I made even more 
+    <h3>Best Highlight about my life was getting into the volleyball team because I made so many new friends and through the team I made even more 
       connections with people who also loved volleyball. Spending time with people doing something we loved really made this the highlight of my Junior Year. 
-    </p>
+    </h3>
     <p>About Volleyball:</p>
     <ul>
     <li>I was an Outside Hitter</li>
@@ -62,16 +66,25 @@
     <li>I am hoping to get right side hitter next year! </li>
     </ul>
 
-    <h3>Sourdough Bread:</h3>
-     <img src=" download-2.jpg" alt="Sourdough Bread"> 
-    <p>A community favorite, boasting a crusty exterior and a soft, airy interior, embodying the classic sourdough charm</p>
+  </section>
+
+  <section class="resource-card"> 
+
+    <h3>I have a cat named Pudding!:</h3>
+     <img src="pudding.png" alt="Sourdough Bread"> 
+    <h4>Pudding is my entire world. She is only 8 months old and she is a calico cat that is not only fiesty but also a little fat. 
+      She loves eating and playing around with her toy mouses. Everday she comes to my room and starts purring. She loves
+      her hello kitty blanket. She is the best thing that has ever happened to me and I cannot wait to love her even more.
+    </h4>
     <p>Ingredients:</p>
     <ul>
-    <li>1 cup sourdough starter</li> 
-    <li>1 1/2 cups warm water</li>
-    <li>4 cups bread flour</li> 
-    <li>1 1/2 teaspoons salt</li>
+    <li>Her birthday is on April 28th</li> 
+    <li>Her favorite food is chicken</li>
+    <li>She has a heart shaped mark on the right side of her body</li> 
+    <li>She has really pink paws!</li>
     </ul>
+
+    </section>
 
     <h3>Classic Carrot Cake:</h3>
      <img src=" Carrot-Cake-Feature.jpg" alt="Carrot Cake"> 
@@ -107,6 +120,7 @@
       <li>instagram.com/denzelstreats</li>
       <li>facebook.com/DenzelsBakery</li>
       </ul>
+
 
 
 
