finished about me

--- a/aboutme.html
+++ b/aboutme.html
@@ -54,6 +54,7 @@
       <section class="resource-card">
   
   <h2>Fun facts about me!</h2>
+  <h3>I was in the volleyball team</h3>
     <img src="volleyball2.png" alt="volleyball team"> 
     <h3>Best Highlight about my life was getting into the volleyball team because I made so many new friends and through the team I made even more 
       connections with people who also loved volleyball. Spending time with people doing something we loved really made this the highlight of my Junior Year. 
@@ -71,7 +72,7 @@
   <section class="resource-card"> 
 
     <h3>I have a cat named Pudding!:</h3>
-     <img src="pudding.png" alt="Sourdough Bread"> 
+     <img src="pudding.png" alt="pudding"> 
     <h4>Pudding is my entire world. She is only 8 months old and she is a calico cat that is not only fiesty but also a little fat. 
       She loves eating and playing around with her toy mouses. Everday she comes to my room and starts purring. She loves
       her hello kitty blanket. She is the best thing that has ever happened to me and I cannot wait to love her even more.
@@ -86,43 +87,21 @@
 
     </section>
 
-    <h3>Classic Carrot Cake:</h3>
-     <img src=" Carrot-Cake-Feature.jpg" alt="Carrot Cake"> 
+    <section class="resource-card">
+
+    <h3>Few things I really enjoy: </h3>
+     <img src="art.png" alt="art"> 
     <p>An homage to tradition and familial bonds, enriched with the natural sweetness of carrots and a crunch of walnuts, it holds a special place in his heart as it was his late grandfather's favorite. Every year on his grandfather's birthday, Denzel bakes this cake to honor his memory and the bond they shared over the love of baking.</p>
     <p>Ingredients:</p>
     <ul>
-      <li>2 cups all-purpose flour</li>
-      <li>2 cups granulated sugar</li>
-      <li>1 teaspoon baking soda</li>
-      <li>2 teaspoons cinnamon</li>
-      <li>1/2 teaspoon salt</li>
-      <li>1 cup vegetable oil</li> 
-      <li>4 large eggs</li>
-      <li>2 cups grated carrots</li>
-      <li>1 cup crushed pineapple</li>
-      <li>1/2 cup chopped walnuts</li>
+      <li>I love going to museums</li>
+      <li>I love reading</li>
+      <li>I love listening to music</li>
+      <li>I have joined multiple clubs this year! I hope one day I can have a role in a club</li>
+      <li>Fun fact about me I used to edit videos and till this day i quite enjoy it</li>
+      
     </ul>
-    <p>Instructions:</p>
-    <ol>
-      <li>First, preheat the oven to 350°F</li>
-      <li>Next, mix together the flour, sugar, baking soda, cinnamon, and salt in a large bowl</li> <li>Then, stir in the oil and eggs until smooth</li>
-      <li>Fold in the carrots, pineapple, and walnuts and then pour the batter into a greased baking pan and bake for 30-35 minutes</li>
-      <li>Make sure you allow the cake to cool before frosting with cream cheese frosting</li>
-    </ol>
-    <h2>Baking tips</h2>
-    <p> importance of measuring ingredients accurately, allowing eggs and butter to reach room temperature before baking, and rotating the baking tray halfway through the baking time for an even bake.</p>
-    <h2>Quotes from happy customers</h2>
-    <p>Tina said, “Denzel’s sourdough is the best in town. It has the perfect crust and is always so fresh!” and Jordan raved, “The almond croissants are a little bite of heaven. I can’t get enough”</p>
-    <h2>Contact information</h2>
-    <ul>
-    <li>denzelstreats@gmail.com</li>
-      <li> linkedin.com/in/denzel-baker </li>
-      <li>instagram.com/denzelstreats</li>
-      <li>facebook.com/DenzelsBakery</li>
-      </ul>
-
-
-
+  </section>
 
   </main>
 
