--- a/contacts.html
+++ b/contacts.html
@@ -41,36 +41,14 @@
     </nav>
   </header>
 
-      <!-- PROJECT 2 -->
-    <section class="resource-card">
-      <div class="project">
-        <iframe src="https://py3.codeskulptor.org/#user310_oFztCTrgSl21uQC.py" title="Holidays drawing project"></iframe>
-
-        <div class="reflection">
-          <h3>Holidays drawing project</h3>
-          <p>
-            Paste your curated reflection for Project 2 here (3–5 sentences).
-          </p>
-          <p><strong>Skills:</strong> (list skills here)</p>
-        </div>
-      </div>
-    </section>
-
         <section class="resource-card">
-      <div class="project">
-        <iframe src="https://py3.codeskulptor.org/#user310_sMqQMVeVTEuhrfW.py" title="Functions Arcade"></iframe>
 
-        <div class="reflection">
-          <h3>Functions Arcade </h3>
-          <p>
-            Paste your curated reflection for Project 2 here (3–5 sentences).
-          </p>
-          <p><strong>Skills:</strong> (list skills here)</p>
-        </div>
-      </div>
-    </section>
+      <h2>Here are ways to conatct me! </h2>
+    <h3>Contact information: </h2>
+    <h3>Student email: mirianm13@nycstudents.net</h3>
+    <h3>Phone Number: XXX-XXX-XXXX</h3>
 
-    <!-- Add more projects by copying PROJECT blocks -->
+      </section>
 
   </main>
 
