--- a/aboutme.html
+++ b/aboutme.html
@@ -74,10 +74,10 @@
     <h3>I have a cat named Pudding!:</h3>
      <img src="pudding.png" alt="pudding"> 
     <h4>Pudding is my entire world. She is only 8 months old and she is a calico cat that is not only fiesty but also a little fat. 
-      She loves eating and playing around with her toy mouses. Everday she comes to my room and starts purring. She loves
-      her hello kitty blanket. She is the best thing that has ever happened to me and I cannot wait to love her even more.
+      She loves eating and playing around with her toy mouses. Everday she gives me a reason to smile because she is such a cute and funny cat.
+      Her cuddles are the best espcially when she sleeps with her hello kitty blanket, it genuienly warms my heart.
     </h4>
-    <p>Ingredients:</p>
+    <p>Facts about pudding:</p>
     <ul>
     <li>Her birthday is on April 28th</li> 
     <li>Her favorite food is chicken</li>
@@ -91,8 +91,11 @@
 
     <h3>Few things I really enjoy: </h3>
      <img src="art.png" alt="art"> 
-    <p>An homage to tradition and familial bonds, enriched with the natural sweetness of carrots and a crunch of walnuts, it holds a special place in his heart as it was his late grandfather's favorite. Every year on his grandfather's birthday, Denzel bakes this cake to honor his memory and the bond they shared over the love of baking.</p>
-    <p>Ingredients:</p>
+    <p>There are a lot of things that make me happy, whether it be the for the most biggest or smallest things. I am a very simple 
+      person who tries to find creativity anywhere. I am out going when I choose to be but I can also stay quiet and enjoy my peace 
+      on my own. Here are some things I think stand out about me the most- 
+    </p>
+    <p>Facts:</p>
     <ul>
       <li>I love going to museums</li>
       <li>I love reading</li>
