--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="bio">
         <div class="bio-pic">
           <!-- Replace profile.jpg with your own image file -->
-          <img src="Screenshot 2026-01-14 10.44.27 PM.png" alt="Your Photo" />
+          <img src="mypicture.png" alt="Your Photo" />
         </div>
 
         <div class="bio-text">
