--- a/projects.html
+++ b/projects.html
@@ -44,12 +44,18 @@
       <!-- PROJECT 2 -->
     <section class="resource-card">
       <div class="project">
-        <iframe src="https://py3.codeskulptor.org/#user310_oFztCTrgSl21uQC.py" title="Holidays drawing project"></iframe>
+        <iframe src="https://py3.codeskulptor.org/#user310_NGvtk0bnbqj2Yhi.py" title="Holidays drawing project"></iframe>
 
         <div class="reflection">
           <h3>Holidays drawing project</h3>
           <p>
-            Paste your curated reflection for Project 2 here (3–5 sentences).
+            This was one of my more creative and challenging projects because it was very tedious and very difficult to get the shapes,points,circles,and lines where I wanted them to go. In this assignment
+            I was asked to use the skills I learned from my previous CFU'S and combine them together to make a project where it had shapes,points,circles and lines. The theme was making a holiday card inspired by any 
+            holiday of our choosing. I chose to make a christmas holiday card where I wanted to incoorperate a snowy day. I used canvas.draw_point to make the snow that is moving around and I used canvas.draw_point to create the small snow falling on 
+            top of the snowmans head. Then I used canvas.draw_line to create the black,red and green background. Using the same canvas.draw_line I used it to create a snowy ground where the snowmans were placed. This wasn't 
+            the only time I used canvas.draw_line, I also used it the snowmans arms! How cute!. Using the canvas.draw_circle statement I used it to create the body and eyes of the snowman so it can actually form and look like one. 
+            Lastly for the canvas.draw_ I used canvas.draw_polygon to create the snowmans nose to give it a completed look and make it look like an accurate snowman, For my final and most impressive touch in my opinion was adding the snow animation at the 
+            end. I used a for loop to be able to create the animation where snow would appear in the colors red and green and play in the background to make it more colorful! So Just like in CFU14 and CFU13 I am using the same concept but instead of using lines and dots we are using lines,points, polygon, circles  to create these cute little snowmans. I used colors to make them look more pretty and colorful for the user to see! Come check out this holiday inspired christmas card!
           </p>
           <p><strong>Skills:</strong> (list skills here)</p>
         </div>
