--- a/projects.html
+++ b/projects.html
@@ -57,7 +57,7 @@
             Lastly for the canvas.draw_ I used canvas.draw_polygon to create the snowmans nose to give it a completed look and make it look like an accurate snowman, For my final and most impressive touch in my opinion was adding the snow animation at the 
             end. I used a for loop to be able to create the animation where snow would appear in the colors red and green and play in the background to make it more colorful! So just like in CFU14 and CFU13 I am using the same concept but instead of using lines and dots we are using lines,points, polygon, circles  to create these cute little snowmans. I used colors to make them look more pretty and colorful for the user to see! Come check out this holiday inspired christmas card!
           </p>
-          <p><strong>Skills:</strong> (list skills here)</p>
+          <p><strong>Skills:</strong>For loop,canvas.draw_line, canvas.draw_point, canvas.draw_polygon, canvas.draw_circle, frame.set_draw_handler</p>
         </div>
       </div>
     </section>
