--- a/cfus.html
+++ b/cfus.html
@@ -49,9 +49,10 @@
         <div class="reflection">
           <h3>CFU#2</h3>
           <p>
-            Paste your curated reflection for Project 2 here (3–5 sentences).
+            This was one of my more simpler CFU's but it was something that made me really proud because I tried my best to create a cute looking cat that was somewhat accurate to my teachers example! In this project I created a character in the shape of a cat only using a single line instead of multiple lines of code. Come check it out and say hi to catty!
+
           </p>
-          <p><strong>Skills:</strong> (list skills here)</p>
+          <p><strong>Skills:</strong>Basic Python skills, Print</p>
         </div>
       </div>
     </section>
@@ -63,9 +64,11 @@
         <div class="reflection">
           <h3>CFU#5</h3>
           <p>
-            Paste your curated reflection for Project 2 here (3–5 sentences).
+            Help out a little canadian kid by having a fun interactive way to calculate how much money you have in canadian money! This was a little bit more
+            on the challenging side and I could try and improve it to make it better, but for the project itself I think it was very creative and well done. It was
+            actually one of my favorites because it was different from what we would usually do. 
           </p>
-          <p><strong>Skills:</strong> (list skills here)</p>
+          <p><strong>Skills:</strong>Variables, Input, Python Math, Print </p>
         </div>
       </div>
     </section>
@@ -77,9 +80,10 @@
         <div class="reflection">
           <h3>CFU#7</h3>
           <p>
-            Paste your curated reflection for Project 2 here (3–5 sentences).
+            This is a four part code that is interactive with the user, it asks multiple questions that the user will type in and go back and forth with the computer. This was a fun code because 
+            whatever answer the user printed it will be responded with the answer the computer is programmed to say which I thought was really cool.So if you are curious of what it asks you, come answer some short easy questions!
           </p>
-          <p><strong>Skills:</strong> (list skills here)</p>
+          <p><strong>Skills:</strong>Variables, Print, If,elif,else </p>
         </div>
       </div>
     </section>
@@ -91,9 +95,12 @@
         <div class="reflection">
           <h3>CFU#10</h3>
           <p>
-            Paste your curated reflection for Project 2 here (3–5 sentences).
+            Do you know the 99 bottles song? Well this is the code just for you. 
+            It is a bit on the lengthier side to read because it is the entire song! I used for loops and print to be 
+            able to create the song where it would go from 99 to 0 which was able to happen because of the for loop. Therefore I think 
+            you should check this code out and sing along to the lines of code that will appear when you click run. Have fun!
           </p>
-          <p><strong>Skills:</strong> (list skills here)</p>
+          <p><strong>Skills:</strong>For loop, Print</p>
         </div>
       </div>
     </section>
