--- a/cfus.html
+++ b/cfus.html
@@ -112,9 +112,11 @@
         <div class="reflection">
           <h3>CFU#13</h3>
           <p>
-            Paste your curated reflection for Project 2 here (3–5 sentences).
+            This is a simple looking code but it actually has more to it than you think! It has over 50 lines of code (78) that creates a simple but cute smile using canvas.draw_point to create the dots shown in the window. 
+            This was a CFU that mainly focused on canvas.draw_point and it's the only thing being show in the code. To see it click run and smile back! 
+
           </p>
-          <p><strong>Skills:</strong> (list skills here)</p>
+          <p><strong>Skills:</strong>canvas.draw_point,frame.set_draw_handler</p>
         </div>
       </div>
     </section>
@@ -126,9 +128,10 @@
         <div class="reflection">
           <h3>CFU#14</h3>
           <p>
-            Paste your curated reflection for Project 2 here (3–5 sentences).
+            If you liked how CFU#13 looked like then surely you will like this one because it is the same concept as the smiley face with the dots except it's now using just lines to create a smiley face using canvas.draw_line :)
+            This code mainly focused on canva.draw_line and the goal was to create a smiley face using lines which I think I did a really good job! To me it looks like it has a sarcastic expression. What about you what do you think?
           </p>
-          <p><strong>Skills:</strong> (list skills here)</p>
+          <p><strong>Skills:</strong>canvas.draw_line,frame.set_draw_handler</p>
         </div>
       </div>
     </section>
