--- a/aboutme.html
+++ b/aboutme.html
@@ -78,12 +78,10 @@
       Her cuddles are the best espcially when she sleeps with her hello kitty blanket, it genuienly warms my heart.
     </h4>
     <p>Facts about pudding:</p>
-    <ul>
-    <li>Her birthday is on April 28th</li> 
-    <li>Her favorite food is chicken</li>
-    <li>She has a heart shaped mark on the right side of her body</li> 
-    <li>She has really pink paws!</li>
-    </ul>
+    <p>Her birthday is on April 28th</p>
+    <p>Her favorite food is chicken</p>
+    <p>She has a heart shaped mark on the right side of her body</p>
+    <p>She has really pink paws!</p>
 
     </section>
 
