--- a/aboutme.html
+++ b/aboutme.html
@@ -60,12 +60,10 @@
       connections with people who also loved volleyball. Spending time with people doing something we loved really made this the highlight of my Junior Year. 
     </h4>
     <p>About Volleyball:</p>
-    <ul>
-    <li>I was an Outside Hitter</li>
-    <li>I played some offical and unoffical games </li>
-    <li>Made new incredible friends that I now play with everyday after school</li>
-    <li>I am hoping to get right side hitter next year! </li>
-    </ul>
+    <p>=͟͟͞͞🏐I was an Outside Hitter</p>
+    <p>=͟͟͞͞🏐I played some offical and unoffical games</p>
+    <p>=͟͟͞͞🏐Made new incredible friends that I now play with everyday after school</p>
+    <p>=͟͟͞͞🏐I am hoping to get right side hitter next year! </p>
 
   </section>
 
@@ -78,10 +76,10 @@
       Her cuddles are the best espcially when she sleeps with her hello kitty blanket, it genuienly warms my heart.
     </h4>
     <p>Facts about pudding:</p>
-    <p>Her birthday is on April 28th</p>
-    <p>Her favorite food is chicken</p>
-    <p>She has a heart shaped mark on the right side of her body</p>
-    <p>She has really pink paws!</p>
+    <p>🍮Her birthday is on April 28th</p>
+    <p>🍮Her favorite food is chicken</p>
+    <p>🍮She has a heart shaped mark on the right side of her body</p>
+    <p>🍮She has really pink paws!</p>
 
     </section>
 
@@ -94,12 +92,11 @@
       on my own. Here are some things I think stand out about me the most- 
     </p>
     <p>Facts:</p>
-    <ul>
-      <li>I love going to museums</li>
-      <li>I love reading</li>
-      <li>I love listening to music</li>
-      <li>I have joined multiple clubs this year! I hope one day I can have a role in a club</li>
-      <li>Fun fact about me I used to edit videos and till this day i quite enjoy it</li>
+      <p>🐞I love going to museums</p>
+      <p>🐞I love reading</p>
+      <p>🐞I love listening to music</p>
+      <p>🐞I love when people call me Miri</p>
+      <p>🐞Fun fact about me I used to edit videos and till this day i quite enjoy it</p>
       
     </ul>
   </section>
