--- a/contacts.html
+++ b/contacts.html
@@ -43,7 +43,7 @@
 
         <section class="resource-card">
 
-      <h2>Here are ways to conatct me! </h2>
+      <h2>Here are ways to contact me! </h2>
     <h3>Contact information: </h2>
     <h3>Student email: mirianm13@nycstudents.net</h3>
     <h3>Phone Number: XXX-XXX-XXXX</h3>
