--- a/index.html
+++ b/index.html
@@ -110,14 +110,10 @@
         <div class="reflection">
           <h3>Functions Arcade</h3>
           <p>
-            This is ths project I am most proud of because it shows the basics and new skills I learned from Python. This project was a group collaberation between me and my peers where we were assigned a certain game of our choice and create a code where the user can play. 
-            The game I chose was the guessing game. The first steps I took into my game was introducing myself to the user an explaining the basic rules to the user. I used a variable and print to make the questions appear for the user.
-            Afterwards I used an if,elif and else statement where basidally if the user typed in Yes it would automaticalluy start the game. If the user types in No it would explain the rules of the game if they did not understand the rules.
-            The user has 10 attempts to guess a number between 1-20 and for each time they get something wrong the code will let the user know if the number is too low or too high. I used random.randint to make that happen. I also used a while loop so that every time 
-            the user gets one wrong they lose one attempt until they reach 0. In the end of my code I used another if,elif, and else statement to let the user know if their answer was to high or to low. Lastly for my final steps I used an if else statement so that
-            when the user gets the right number it will print "Correct!, You won the guessing game" and if the user lost it would print the right answer and how many attempts it took.So if you are bored and want to play a few games like Guessing game, coin flip, and Math quiz then this is the code for you! We have an interactive game where we let the user choose the game of choice and run through our code until they win the game!
+            If you are bored and want to play a few games like Guessing game, coin flip, and Math quiz then this is the code for you! We have an interactive game where we let the user choose the game of choice and run through our code until they win the game we used
+            many things like for loops and if, elif, and else statements to create a game where the user has multiple attempt to win the game! This project challenged me but I was proud with the results of the project. 
           </p>
-          <p><strong>Skills:</strong> Python skills: Def, For loops, if,else,elif,random.randint, While loops, frame, collaboration.</p>
+          
         </div>
       </div>
     </section>
