--- a/aboutme.html
+++ b/aboutme.html
@@ -73,7 +73,7 @@
      <img src="pudding.png" alt="pudding"> 
     <h4>Pudding is my entire world. She is only 8 months old and she is a calico cat that is not only fiesty but also a little fat. 
       She loves eating and playing around with her toy mouses. Everday she gives me a reason to smile because she is such a cute and funny cat.
-      Her cuddles are the best espcially when she sleeps with her hello kitty blanket, it genuienly warms my heart.
+      Her cuddles are the best especially when she sleeps with her hello kitty blanket, it genuienly warms my heart.
     </h4>
     <p>Facts about pudding:</p>
     <p>🍮Her birthday is on April 28th</p>
