--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             If you are bored and want to play a few games like Guessing game, coin flip, and Math quiz then this is the code for you! We have an interactive game where we let the user choose the game of choice and run through our code until they win the game we used
             many things like for loops and if, elif, and else statements to create a game where the user has multiple attempt to win the game! This project challenged me but I was proud with the results of the project. 
           </p>
-          <p><strong>Skills:</strong>Skills: Python skills: Def, For loops, if,else,elif,random.randint, While loops, frame, collaboration.</p>
+          <p><strong>Skills:</strong>Python skills: Def, For loops, if,else,elif,random.randint, While loops, frame, collaboration.</p>
 
         </div>
       </div>
